Phi/Theta Sliders
Implemented light position sliders

--- a/shadedSphere.html
+++ b/shadedSphere.html
@@ -1,5 +1,5 @@
-<!-- name: your name here
-date:
+<!-- name: Tess Julien
+date: October 7, 2018
 proposed points: number of proposed points (out of 20) 
 If I do not update this code to include my name and proposed points, 
 Professor Urness will email me and ask me to do so (and deduct a point as a penalty)
